@@ -1,3 +1,5 @@
+> Added fudge factors to improve velocity and acceleration scales
+> Inverted Y Axis so that positive Y is up
 > Major performance improvements
 
 # 1.20.24 (27822) 01-31-2009
